# SpeedControlModule

./: Dockerfile.ubuntuBip  README.md  TestCaseMGR.cxx  TestCaseMGR.h
BIP-PreScan/: compile_run_bip.sh  learn.bip
BIP-PreScan/ext-cpp/: Inference.py  VideoFromFabricGateway.cxx  VideoFromFabricGateway.h  utilities.cpp  utilities.hpp
BIP/imageDetection/ext-cpp/: Inference.py
BIP/videoDetection/: learn.bip
BIP/videoDetection/ext-cpp/: Inference.py  utilities.cpp
learn/: CMakeLists.txt  Inference.cpp  setup.sh
model/: SpeedControl  learn.bip
modelClassification/: compile_run_bip.sh  learn.bip
modelClassification/ext-cpp/: utilities.cpp  utilities.hpp
model_detection/: learn.bip
model_detection/ext-cpp/: utilities.cpp
partialModel/: learn.bip
partialModel/ext-cpp/: a.out  limit  utilities.cpp  utilities.hpp
