cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(traffic-signs)
find_package(OpenCV REQUIRED)
find_package(Torch REQUIRED)
message(STATUS "Pytorch status:")
message(STATUS "    libraries: ${TORCH_LIBRARIES}")
message(STATUS "Find Torch VERSION: ${Torch_VERSION}")
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  # set(TORCH_CXX_FLAGS "-D_GLIBCXX_USE_CXX11_ABI=0")
endif()

include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(limit Inference.cpp )
target_link_libraries(limit ${TORCH_LIBRARIES} ${OpenCV_LIBS})
set_property(TARGET limit PROPERTY CXX_STANDARD 14)
